# SmartQ

./: README.md  pyproject.toml
docs/: API_DOCUMENT.md  ARCHITECTURE.md  FRONTEND_GUIDE.md
src/: app.py
src/ollama/: json_schemas.py  ollama_client.py
static/: script.js  style.css  styles.css
templates/: index.html
